# glass-slippers

./: .gitignore  Cargo.toml  ProxyConfig.toml  dump.rdb  redis.conf
.github/workflows/: build-dev-example.yaml  test.yaml
crates/auth/: Cargo.toml
crates/auth/src/: auth_session_db.rs  auth_user_client.rs  data_model.rs  handlers.rs  lib.rs  proxy_client.rs  server.rs  server_state.rs  user_db.rs
crates/email/: Cargo.toml
crates/proxy/: Cargo.toml
crates/proxy/src/: bg_services.rs  main.rs  proxy.rs
crates/runner/: Cargo.toml
crates/runner/src/: github_event.rs  lib.rs
email_templates/: verification.html
examples/auth-server/: Cargo.toml  README.md  auth.db  dump.rdb
examples/auth-server/src/: app.rs  data_model.rs  lib.rs  main.rs  server.rs
examples/auth-user/: Cargo.toml  README.md
examples/auth-user/src/: app.rs  main.rs
examples/dev-example/: Cargo.toml  README.md
examples/dev-example/end2end/tests/: example.spec.ts
examples/dev-example/src/: app.rs  browser_session_id.rs  lib.rs  main.rs
examples/email-ui/: Cargo.toml  README.md
examples/email-ui/src/: app.rs  lib.rs  main.rs  server.rs
examples/tracing-ui/: Cargo.toml  README.md  package-lock.json
examples/tracing-ui/src/: app.rs  db.rs  lib.rs  main.rs
src/: github_event.rs  lib.rs  main.rs  observability.rs  runner.rs  unzip.rs
