[package]
name = "glass-slippers"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
hex = "0.4"
hmac-sha256 = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
subtle = "2.5"
tower = { version = "0.4", default-features = false , features = ["util"]}
tokio = { version = "1.35", features = ["macros"] }

[dev-dependencies]
http-body-util = { version = "0.1.0" }
hyper = { version = "1.0.1", default-features = false }
