[package]
name = "glass-slippers"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.7.6",features=["macros"]}
axum-macros = "0.4.2"
hex = "0.4"
hmac-sha256 = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
subtle = "2.5"
tower = { version = "0.4", default-features = false , features = ["util"]}
tokio = { version = "1.35", features = ["full"] }
toml = "0.7"
reqwest = {version ="0.12.7", features=["json"]}
zip = "2.2.0"
tar = "0.4.42"
tempfile = "3.12.0"
nix = {version = "0.29.0", features = ["process","signal"]}

[dev-dependencies]
http-body-util = { version = "0.1.0" }
hyper = { version = "1.0.1", default-features = false }
