[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.6", features = ["macros"] }
axum-macros = "0.4.2"
bincode = { version = "1.3.3" }
bytes = "1.7.2"
hex = "0.4"
hmac-sha256 = "1.1"
http = "1"
http-body-util = { version = "0.1.2" }
hyper = { version = "1.4.1", features = ["client"] }
hyper-util = { version = "0.1.9" }
password-auth = { version = "1.0.0" }
rand = { version = "0.8.5", features = ["getrandom"] }
redis = { version = "0.27.4", features = ["tokio-comp", "uuid", "aio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
subtle = "2.5"
thiserror = "1"
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", default-features = false, features = ["util"] }
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["serde", "v4"] }


[dev-dependencies]
http-body-util = { version = "0.1.0" }
hyper = { version = "1.0.1", default-features = false }
