[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
default-run = "main"


[[bin]]
name = "main"
path = "src/main.rs"


[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.6", features = ["macros"] }
axum-macros = "0.4.2"
bincode = { version = "1.3.3" }
bytes = "1.7.2"
cookie = "0.18.1"
hex = "0.4"
hmac-sha256 = "1.1"
http = "1"
http-body-util = { version = "0.1.2" }
hyper = { version = "1.4.1", features = ["client"] }
hyper-util = { version = "0.1.9" }
mockall = "0.13.0"
nix = { version = "0.29.0", features = ["process", "signal"] }
password-auth = { version = "1.0.0" }
pingora = { version = "0.3.0", features = ["proxy"] }
redis = { version = "0.27.4", features = ["tokio-comp", "uuid", "aio"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
subtle = "2.5"
tar = "0.4.42"
tempfile = "3.12.0"
thiserror = "1"
tokio = { version = "1.35", features = ["full"] }
toml = "0.7"
tower = { version = "0.4", default-features = false, features = ["util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zip = "2.2.0"

auth = { path = "../auth" }
runner = { path = "../runner" }

[dev-dependencies]
http-body-util = { version = "0.1.0" }
hyper = { version = "1.0.1", default-features = false }
