[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.6", features = ["macros"] }
axum-macros = "0.4.2"
bytes = "1.7.2"
hex = "0.4"
hmac-sha256 = "1.1"
http = "1"
http-body-util = { version = "0.1.2" }
hyper = { version = "1.4.1", features = ["client"] }
hyper-util = { version = "0.1.9" }
mockall = "0.13.0"
nix = { version = "0.29.0", features = ["process", "signal"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
subtle = "2.5"
tar = "0.4.42"
tempfile = "3.12.0"
thiserror = "1"
tokio = { version = "1.35", features = ["full"] }
toml = "0.7"
tracing = "0.1.40"

zip = "2.2.0"


[dev-dependencies]
tower = { version = "0.4", default-features = false, features = ["util"] }
procfs = "0.17.0"
http-body-util = { version = "0.1.0" }
hyper = { version = "1.0.1", default-features = false }
